# barbershop

./: .env.example  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  TODO.md  app.py  install.sh  pyproject.toml  register_haircuts.csv  requirements.txt  test-dates.js  vercel.json
.github/workflows/: opencode.yml  test.yml
api/: index.py
barbershop/: README.md  __init__.py  app.py  main.py
barbershop/database/: __init__.py  create_connection.py  database.py
barbershop/gui/: __init__.py  constants.py  haircut_registration.py  main.py  read_register.py  register_haircut.py  show_historico.py  show_register.py  update_income_display.py  update_information_in_display.py
barbershop/gui/utils/: __init__.py  generate_label.py  update_tree_view.py  update_treeview.py
barbershop/models/: __init__.py  haircut.py  user.py
barbershop/repositories/: __init__.py  base.py  haircuts.py  handler_errors.py  users.py
barbershop/routes/: __init__.py  auth.py  haircuts.py
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: DailyHistoryList.tsx  Dashboard.tsx  ExcelImporter.tsx  (+6 more)
tests/: conftest.py  debug_api_request.py  debug_create_haircut.py  debug_http_request.py
tests/api/: conftest.py  test_auth_endpoints.py  test_auth_unit.py  test_haircuts.py
tests/core/: test_core.py
tests/database/: test_create_connection.py  test_database_errors.py  test_integration.py
tests/frontend/: test_frontend_api.py
tests/haircuts/: conftest.py  test_haircuts.py
tests/routes/: conftest.py  test_haircuts.py
(+6 files in other folders)
