[build-system]
requires = ["setuptools==68.0.0", "setuptools-pipfile==0.7.0", "wheel==0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barbershop"
version = "0.1.0"
description = "Barbershop application"
license = "MIT"

dynamic = ["dependencies"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
