[tool.poetry]
name = "barbershop"
version = "0.1.0"
description = "A barbershop management application"
authors = ["Tomas Vazquez <tomasvazquez@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
